--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.21",
-    "bootstrap": "^5.3.8",
+    "bootstrap": "5.3.8",
     "bootstrap-icons": "^1.13.1",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
@@ -22,5 +22,6 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "repository": "https://github.com/narcelllo/quero-viajar.git"
 }
