Really poor attempt at adding answers

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Marcello Magno <Marcello_magno@hotmai.com>",
   "license": "MIT",
   "dependencies": {
+    "@nathanvda/cocoon": "^1.2.14",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.21",
     "bootstrap": "5.3.8",
